# vc-research-algorithms

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: CompilerOptions.cmake  Dependencies.cmake  Linters.cmake  Sanitizers.cmake
cmake/internal/: GetCPM.cmake
data/: graph_editor_default.txt
include/algorithms/: connectivity.h  dfs.h  ilst.h  orderings.h  traversal.h  vc.h  vertex_cover.h
include/common/: constants.h
include/graph_helpers/: graph_helpers.h
include/helpers/: graph.h  io.h
include/io_helpers/: io_helpers.h
src/algorithms/: connectivity.cxx  connectivity.test.cxx  dfs.cxx  dfs.h  dfs.test.cxx  ilst.cxx  ilst.h  ilst.test.cxx  orderings.cxx  traversal.cxx  traversal.test.cxx  vc.cxx  vc.h  vc.test.cxx  vertex_cover.cxx  vertex_cover.h  vertex_cover.test.cxx
src/cmd/: main.cxx
src/cmd/cvc/: main.cxx
src/cmd/local_ratio_vc/: main.cxx
src/cmd/vc/: main.cxx
src/graph_helpers/: graph_helpers.cxx
src/helpers/: graph.cxx  io.cxx  io.h
src/io_helpers/: io_helpers.cxx  io_helpers.h
tools/iwyu/: libcxx.imp
